--- a/side-panel-toggle.html
+++ b/side-panel-toggle.html
@@ -130,7 +130,7 @@ const closebtn=document.getElementById("closeButton")
 
 openbtn.addEventListener("click", function(){
   sidepanel.classList.add("show");
-  sidepanel.classList.add("disble")
+  sidepanel.classList.add("disable")
 })
 closebtn.addEventListener("click", function(){
   sidepanel.classList.remove("show");
